# salvo-rbatis-demo

./: .gitignore  Cargo.toml  Cargo.toml.bak  README.md  build.sh  get_all_code.sh  权限.sh
.github/workflows/: ci.yml
src/: main.rs  main.rs.bak
src/config/: init.rs  init.rs.bak  mod.rs  nacos.rs  redis.rs  router.rs
src/controller/: login.rs  mod.rs  users_controller.rs  users_controller.rs.bak  video_controller.rs
src/mapper/: users_mapper.rs
src/pojo/: token.rs
src/res/: result.rs
src/research/: id.rs  login.rs  mod.rs
src/services/: mod.rs  mod.rs.bak  users_service.rs  users_services.rs
src/services/Impl/: users_services_impl.rs
src/services/impl/: users_services_impl.rs
