[package]
name = "salvo-rbatis-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { git = "https://github.com/salvo-rs/salvo" }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
async-std = "1.11.0"
fast_log = "1.5.24"
rbdc = "0.1.2"
tokio = { version = "1.40.0", features = ["macros"] }

json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"
log4rs = "1.0"

rbs = { version = "4.5"}
rbatis = { version = "4.5", features = [] }
rbdc-mysql = "4.5.11"
jsonwebtoken = "9.3.0"

futures = { version = "0.3", default-features = false }
thiserror = "1.0"
once_cell = "1.19.0"
redis = "0.27.2"
nacos-sdk = "0.4.2"

[profile.dev]
overflow-checks = false
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
panic = "abort"
incremental = false
