[package]
name = "salvo-rbatis-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = { git = "https://gitee.com/salvo-rs/salvo", features = ["quinn", "salvo_extra"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rbs = { version = "4.5.20" }
rbatis = { version = "4.5.32", features = [] }
rbdc-mysql = "4.5.11"
once_cell = "1.20.1"
nacos-sdk = "0.4.2"
redis = { version = "0.27.4", features = ["tokio-comp", "json", "cluster"] }


[profile.dev]
overflow-checks = false
strip = true

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
panic = "abort"
incremental = false
